[FLINK-5329] Fix metric list being cut off
This closes #3109.

--- a/flink-runtime-web/web-dashboard/app/styles/metric.styl
+++ b/flink-runtime-web/web-dashboard/app/styles/metric.styl
@@ -38,7 +38,9 @@
 
       .metric-menu
         max-height: 300px
+        max-width: 900px
         overflow-y: scroll
+        text-align: right
 
 $metric-row-height = 180px + 85px
 
